orders per day + tests